--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
     --diary: 252 252 252;
     --cornflower: #e7e9fc;
     --grey: rgba(46, 47, 66, 0.7);
+    --navy-blue-modal: rgba(46, 47, 66, 0.4);
     --row-indent: 48px;
     --col-indent: 24px;
     --items: 4;
@@ -467,7 +468,7 @@ footer {
     align-items: baseline;
 }
 .footer-start {
-    margin-right: 120px
+    margin-right: 120px;
 }
 .footer-logo {
     color: var(--cloud);
@@ -477,6 +478,9 @@ footer {
     color: var(--cloud);
     line-height: 150%;
     max-width: 264px;
+}
+.footer-social {
+    margin-right: 80px
 }
 
 .footer-social-title {
@@ -496,6 +500,57 @@ footer {
 .footer-social .social-item-link:focus {
     background-color: var(--green);
 }
+.form-subscribe {
+    margin-top: 16px;
+    display: flex;
+    gap:24px;
+}
+
+
+.email-input {
+    padding: 8px 16px;
+    border: 1px solid var(--white);
+    border-radius: 4px;
+    max-width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    background-color: var(--navy-blue);
+    color: var(--white);
+    outline: transparent;
+    transition: var(--anim-fast);
+    transition-property: border-color;
+    font-size: 12px;
+    line-height: 200%;
+    letter-spacing: 0.04em;
+}
+
+.email-input:focus {
+    border-color: var(--iris);
+}
+.email-input::placeholder {
+    color: var(--white);
+}
+
+.btn-subscribe {
+    border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: var(--anim-fast);
+    transition-property: background-color;
+}
+.btn-subscribe:hover,
+.btn-subscribe:focus {
+    background-color: var(--ocean);
+}
+
+
+.subscribe-link-icon {
+    fill: var(--white)
+}
 /* #endregion */
 
 /* #region modal */
@@ -507,7 +562,20 @@ footer {
     height: 100%;
     background-color: rgb(var(--navy-blue-rgb)/ 45%);
     backdrop-filter: blur(2px);
+    transition: var(--anim-fast);
+    transition-property: opacity, visibility;
+
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
 }
+.backdrop.is-open {
+    opacity: 1;
+    pointer-events: initial;
+    visibility: visible;
+}
+
+
 .modal {
     position: absolute;
     top: 50%;
@@ -518,7 +586,7 @@ footer {
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     max-width: 408px;
     min-height: 600px;
-    padding: 24px;
+    padding: 72px 24px 24px;
 }
 .modal-btn-close {
     position: absolute;
@@ -527,51 +595,169 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0;
     background-color: var(--cornflower);
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     padding: 8px;
-}
-.modal-btn-close-wrapper {
-    
-    
+    transition: var(--anim-fast);
+    transition-property: background-color;
 }
 
 .modal-close-icon {
-    fill: black;
+    fill: var(--navy-blue);
+    transition: var(--anim-fast);
+    transition-property: fill;
 }
+
+.modal-btn-close:hover,
+.modal-btn-close:focus {
+    background-color: var(--ocean);
+}
+
+.modal-btn-close:hover .modal-close-icon,
+.modal-btn-close:focus .modal-close-icon {
+    fill: var(--white); 
+}
+
 .modal-title {
-    margin-top: 24px;
+    font-weight: 500;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--navy-blue);
+    margin-bottom: 16px;
 }
 .modal-form {
-}
-.modal-close-icon {
+
 }
 .modal-form-field {
+    margin-bottom: 8px;
 }
-.modal-form-agreement {
-}
-.btn {
-}
+
 .modal-form-lable {
+    display: block;
+    margin-bottom: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
 }
 .modal-input-wrapper {
+    position: relative;
 }
-.modal-form-comment {
-}
-.modal-form-description {
-}
+
 .modal-form-input {
+    padding: 11px 38px;
+    border: 1px solid var(--navy-blue-modal);
+    border-radius: 4px;
+    color: var(--navy-blue);
+    display: block;
+    width: 100%;
+    height: 40px;
+    outline: transparent;
+    transition: var(--anim-fast);
+    transition-property: border-color;
+}
+.modal-form-input:focus {
+    border-color: var(--iris);
 }
 .modal-form-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill: var(--navy-blue);
+    stroke: none;
+    transition: var(--anim-fast);
+    transition-property: fill;
+}
+.modal-form-input:focus + .modal-form-icon {
+    fill: var(--iris);
+}
+
+
+.modal-form-comment {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    margin-bottom: 16px;
+    border: 1px solid var(--navy-blue-modal);
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    outline: transparent;
+    resize: none;
+    padding: 8px 16px;
+    transition: var(--anim-fast);
+    transition-property: fill;
+}
+
+.modal-form-comment::placeholder {
+    color: var(--navy-blue-modal);
+}
+
+.modal-form-comment:focus {
+    border-color: var(--iris);
+}
+
+.modal-form-agreement {
+    margin-bottom: 40px;
+}
+
+.modal-form-agreement-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
 }
 .modal-form-checkbox {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid var(--navy-blue-modal);
+    margin-right: 8px;
 }
 .modal-form-link {
+    line-height: 133%;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: var(--iris);
 }
+
 .modal-form-checkbox-icon {
+    fill: none;
+}
+input[type='checkbox']:checked + .modal-form-agreement-text  > .modal-form-checkbox {
+    background-color: var(--iris);
 }
 
+input[type='checkbox']:checked + .modal-form-agreement-text .modal-form-checkbox-icon {
+    fill: var(--cloud);
+}
+input[type='checkbox']:focus-visible + .modal-form-agreement-text  .modal-form-checkbox {
+    box-shadow: 0 0 0 1px rgb(var(--navy-blue-rgb)/ 45%);
+}
 
+.btn-send {
+    display: block;
+    margin: 0 auto;
+    min-width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    text-align: center;
+    color: var(--white);
+    transition: var(--anim-fast);
+    transition-property: background-color;
+}
+
+.btn-send:hover,
+.btn-send:focus {
+    background-color: var(--ocean);
+    border: none;
+}
 /* #endregion */
