--- a/css/styles.css
+++ b/css/styles.css
@@ -568,10 +568,9 @@ footer {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--navy-blue-modal);
-    backdrop-filter: blur(2px);
-    transition: var(--anim-fast);
-    transition-property: opacity, visibility;
+    z-index: 999;
+    background-color: rgba(46, 47, 66, 0.40);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
